2006-05-05  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/src/rinterface.c (R_igraph_getListElement) : added

	* interfaces/R/src/rinterface.c (R_igraph_attribute_add_vertices)
	(R_igraph_attribute_add_edges) : handle attr argument
	(R_igraph_attribute_get_info, R_igraph_attribute_has_attr)
	(R_igraph_get_numeric_graph_attr, R_igraph_get_string_graph_attr)
	(R_igraph_get_numeric_vertex_attr, R_igraph_get_string_vertex_attr)
	(R_igraph_get_numeric_edge_attr, R_igraph_get_string_edge_attr) : added
	(R_igraph_attribute_table) : updated
	(R_igraph_add_vertices, R_igraph_add_edges) : updated

2006-04-30  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/iterators.R (igraph.es.fromorder)
	(igraph.es.adj, igraph.vs.adj) : removed
	* interfaces/R/src/rinterface.c (R_igraph_vs_to_SEXP)
	(R_igraph_es_to_SEXP, R_igraph_vs_all, R_igraph_es_all)
	(R_igraph_es_fromorder, R_igraph_es_adj, R_igraph_vs_adj)
	(R_igraph_vs_vector, R_igraph_es_vector, R_igraph_vs_next)
	(R_igraph_es_next, R_igraph_vs_reset, R_igraph_es_reset)
	(R_igraph_vs_end, R_igraph_es_end, R_igraph_vs_get, R_igraph_es_get)
	(R_igraph_es_from, R_igraph_es_to) : removed

	* interfaces/R/igraph/R/iterators.R (V, E, print.igraphesseq)
	(print.igraphesseq, print.igraphvsvector, print.igraphesvector)
	(length.igraphvsseq, length.igraphesseq, length.igraphvsvector)
	(length.igraphesvector) : added
	* interfaces/R/igraph/R/structural.properties.R 
	(get.all.shortest.paths) : updated 
	* interfaces/R/src/rinterface.c (R_SEXP_to_igraph_vs_copy)
	(R_SEXP_to_igraph_es_copy) : rewritten
	(R_igraph_delete_vertices, R_igraph_closeness, R_igraph_betweenness)
	(R_igraph_cocitation, R_igraph_shortest_paths)
	(R_igraph_get_shortest_paths, R_igraph_subgraph)
	(R_igraph_get_all_shortest_paths) : updated

2006-04-28  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/src/rinterface.c (R_igraph_attribute_copy) :
	attribute handling but corrected

2006-04-23  Gabor Csardi  <csardi@kzoo.edu>
